fix config.json issue
it looks only module.class.method can be supported

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "entry-method": "sibyl.analytic.predict",
+  "entry-method": "sibyl.LinearPredict.predict",
   "non-conda-libs": [],
   "conda-libs": [
     "numpy",
